Finished spacing issues

--- a/assets/styles/component-styles/hero-slider.scss
+++ b/assets/styles/component-styles/hero-slider.scss
@@ -47,6 +47,11 @@
       }
     }
   }
+
+  &.--hero-pad {
+    margin-bottom: 7vw;
+    margin-top: 5vw;
+  }
 }
 
 // Container for Slides
