--- a/assets/styles/component-styles/shared/sixgrid.scss
+++ b/assets/styles/component-styles/shared/sixgrid.scss
@@ -5,18 +5,18 @@
 section.zuc-sixgrid-container {
   position: relative;
   overflow: hidden;
-  padding: 5vh 5vw vw-phone(100);
+  padding: 5vh 5vw 0;
   display: flex;
   flex-direction: column;
 
   @media #{$tablet-up} {
-    padding: 0 7vw vw-tablet(200);
+    padding: 0 7vw;
   }
   @media #{$laptop-only} {
-    padding: 0 20vw vw-laptop(200);
+    padding: 0 20vw;
   }
   @media #{$desktop-up} {
-    padding: 0 24vw vw-desktop(200);
+    padding: 0 24vw;
   }
 
   &.--grey {
